added go-open api for documentation /docs
